fix:Correct CORS configuration for production.